--- a/components/central/central.html
+++ b/components/central/central.html
@@ -14,13 +14,16 @@
               <br>Z80 8-Bit Machinecode, man, das waren Zeiten.
               <br><br>Freut mich, daß Ihr mein Portfolio besucht. 
               <br>Ich hoffe, Ihr habt viel Spaß dabei, es zu erkunden. 
-              <br>Mir hat es ne Menge Spaß gemacht, es zu programmieren.
+              <br>Mir macht es ne Menge Spaß, es zu programmieren.
               <br>Es ist immer wieder toll, anzusehen, wie Ideen Gestalt annehmen 
               <br>und zu funktionierenden Elementen werden.
               <br><br>Bei der Programmierung habe ich nur selten auf Templates
               <br>und Vorgefertigtes zurückgegriffen. Ich will einfach wissen, 
               <br>wie alles funktioniert.
-              <br><br>Ihr findet mich auf <a  href="https://www.linkedin.com/in/clemens-behrens-883b591a1/" >LinkedIn</a>, 
+              <br><br>Als nächstes werde ich die Componenten weiter ausbauen
+                      <br>und reponsive machen. Gibt noch viel zu tun.
+              
+<br><br>Ihr findet mich auf <a  href="https://www.linkedin.com/in/clemens-behrens-883b591a1/" >LinkedIn</a>, 
               <br>oder schickt mir einfach ne  <a href=mailto:cbehrensbewerb@gmail.com? subject="HTML link">Mail</a>.
             </h3></div>
        <div>
