--- a/components/central/central.html
+++ b/components/central/central.html
@@ -55,7 +55,7 @@
         <picture>
           <img src="../../assets/bigFace.png" alt="Portrait" width="100%" >
           </picture>
-           <a style="position: absolute; top: 85% ;margin: auto; "target="blank"  href="../impressum/impressum.html" >
+           <a style="position: absolute; top: 85% ;margin: auto; font-size: 1vw; "target="blank"  href="../impressum/impressum.html" >
   Impressum</a>
             </div>
     
