--- a/components/central/central.html
+++ b/components/central/central.html
@@ -21,7 +21,7 @@
               <br>und Vorgefertigtes zurückgegriffen. Ich will einfach wissen, 
               <br>wie alles funktioniert.
               <br><br>Als nächstes werde ich die Componenten weiter ausbauen
-                      <br>und responsive machen. Gibt noch viel zu tun.
+                      <br>und reponsive machen. Gibt noch viel zu tun.
               
 <br><br>Ihr findet mich auf <a  href="https://www.linkedin.com/in/clemens-behrens-883b591a1/" >LinkedIn</a>, 
               <br>oder schickt mir einfach ne  <a href=mailto:cbehrensbewerb@gmail.com? subject="HTML link">Mail</a>.
