--- a/components/central/central.html
+++ b/components/central/central.html
@@ -48,7 +48,8 @@
            <a target="blank" href="../erklärbär/index.html" >
            <button class='centralButton'>Erklärbär, 
              <br>meine Abschlussarbeit
-            <br>des Schnupperkurses</button></a>
+            <br>des vierwöchigen
+            <br>Schnupperkurses</button></a>
         
           </div>
         </article>
